[package]
name = "bpe_tokenizer"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rayon = "1.10"
dashmap = "6"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
ndarray = "0.16"
ndarray-npy = "0.9"
indicatif = { version = "0.17", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
